Bug 47071 - UI: Undocked toolbars do not show all icons in special ratio
Summary: UI: Undocked toolbars do not show all icons in special ratio
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.5.0 release
Hardware: All All
: medium normal
Assignee: Ivan Timofeev (retired)
URL:
Whiteboard: target:3.7.0 target:3.6.0.1 target:3.5.6
Keywords: regression
Depends on:
Blocks:
 
Reported: 2012-03-07 12:36 UTC by Regina Henschel
Modified: 2016-04-24 20:30 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
three screenshots collected in one document (32.44 KB, application/vnd.oasis.opendocument.graphics)
2012-03-07 12:36 UTC, Regina Henschel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2012-03-07 12:36:40 UTC
Created attachment 58143 [details]
three screenshots collected in one document

Undock the bullets and numbering dialog.
Drag an edge to rearrange it to multi-line layout.
In case of 5 columns not all icons are shown, see attached screenshot.
Comment 1 Rainer Bielefeld Retired 2012-05-16 01:02:51 UTC
[Reproducible] with "LibreOffice 3.5.3.2 (RC2) German UI/Locale [Build-ID: 235ab8a-3802056-4a8fed3-2d66ea8-e241b80] on German WIN7 Home Premium (64bit) 

Seems to be new, not reproducible with 3.4.5.

Problem already
[Reproducible] with Server installation of Master "LibO-dev 3.5.0  – WIN7 Home Premium (64bit) English UI 
[(Build ID:d337f79-a24c961-2865670-9752b71-7f8fd43
	2fdd60d-fd28b6a-fd7bf20-aa369cb-28da3fb
	6a9633a-931d089-ecd263f-c9b55e9-b31b807
	82ff335-599f7e9-bc6a545-1926fdf)]"  from (July 2011)

@Ivan:
May I ask you to have a look?
Comment 2 sasha.libreoffice 2012-05-30 07:57:34 UTC
Thanks for bugreport
reproduced in 3.5.2 on Windows 7 and in 3.5.3 on Fedora 64 bit
not reproducible in 3.3.4 and 3.4.2 , therefore regression

reproduced with toolbars "Standard", "Formatting", "Bullets and Numbering", other not tested.

also reproduced in 3.5.0 beta 3 on Windows XP, changing version to it
Comment 3 sasha.libreoffice 2012-05-30 09:08:15 UTC
@ Rainer
Sorry, version where bug appears is from July 2011 or older (Comment 1)
Changing version to Unspecified, because it was one of Alpha versions
Comment 4 Ivan Timofeev (retired) 2012-06-30 04:11:09 UTC
I see this bug with various toolbars since 3.5... Bug 39229 shows that there were problems even in 3.4, interesting.

I spent a lot of time on this, but my feeble-minded brain has not produced a solution yet. Well, maybe some day it will produce something. :)

The problem originates in 
http://cgit.freedesktop.org/libreoffice/core/commit/?id=1703501a100cd6d52578baeb4e8097218b285ffb
or more exactly here:
  else if ( it->meType == TOOLBOXITEM_SEPARATOR )
+ {
    nCurWidth = it->mnSepSize;
+   if ( ( it != lastVisible ) && (nLineWidth+nCurWidth+nMenuWidth > nWidthTotal) )
+     bBreak = sal_True;
+ }

so a separator would be placed at the next line if the current line has not enough space for it. And this caused troubles. Yes, you never know what troubles can cause your (pretty safe) patch in LibreOffice.
Comment 5 Not Assigned 2012-07-09 13:32:33 UTC
Ivan Timofeev committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=89de7eef5090c5efdca1314f8838bdc977001e5d

fdo#47071: Undocked toolbars do not show all icons in special ratio
Comment 6 Not Assigned 2012-07-09 13:32:59 UTC
Ivan Timofeev committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=20ed0cf74cc4dc4e181b5403a1faf351b6eb38b7&g=libreoffice-3-6

fdo#47071: Undocked toolbars do not show all icons in special ratio


It will be available in LibreOffice 3.6.
Comment 7 Ivan Timofeev (retired) 2012-07-09 14:32:59 UTC
Fixed in an ugly way - disabled that code (Comment 4) for floating toolbars. Review for 3.5 in progress.
Comment 8 Not Assigned 2012-07-13 14:36:38 UTC
Ivan Timofeev committed a patch related to this issue.
It has been pushed to "libreoffice-3-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=768cb747ee11a85d2f209f46fad95c4d6ce76537&g=libreoffice-3-5

fdo#47071: Undocked toolbars do not show all icons in special ratio


It will be available in LibreOffice 3.5.6.
Comment 9 Jean-Baptiste Faure 2016-04-24 20:30:12 UTC
Version set from comment #1.

Best regards. JBF