fdo#47071: Undocked toolbars do not show all icons in special ratio

restore the old behaviour (pre-1703501a100cd6d52578baeb4e8097218b285ffb)
 for floating toolbars.

Change-Id: I8435bd94a44744c5af7a3abdbeb99e8f7cf0af24